--- a/view/include/header.html
+++ b/view/include/header.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Example REST API Client</title>
-    <!-- <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.fluid.classless.min.css">  -->
+    <!-- <link rel="stylesheet" href="stylesheet.css"> -->
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.fluid.classless.min.css"> 
 </head>
 
 <body>
